--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,6 +1,16 @@
 name: Run Connector
 on:
   workflow_dispatch:
+    inputs:
+      dag_target:
+        description: 'Run specific DAG nodes (comma-separated)'
+        required: false
+        type: string
+      dag_on_failure:
+        description: 'Failure behavior: crash (default) or continue'
+        required: false
+        type: string
+        default: 'crash'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -25,8 +35,11 @@ jobs:
         PYTHONUNBUFFERED: 1
         CI: 'true'
         ENABLE_LOGGING: 'true'
+        GITHUB_CONNECTOR_URL: 'https://github.com/nathansnellaert/bureau-economic-analysis'
         R2_ACCOUNT_ID: ${{ secrets.R2_ACCOUNT_ID }}
         R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
         R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
         R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
+        DAG_TARGET: ${{ inputs.dag_target }}
+        DAG_ON_FAILURE: ${{ inputs.dag_on_failure }}
         BEA_API_KEY: ${{ secrets.BEA_API_KEY }}
